# AASC_sentence_search_API

./: .gitignore  README.md  main.py  pyproject.toml
